--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ task deploy {
     outputs.upToDateWhen { false }
 
     doFirst {
-        String deployFolderName = 'DiscordTizilandBot_' + env
+        String deployFolderName = 'DiscordSchoolroomsBot_' + env
 
         String deployPath = project.rootDir.absolutePath + '/' + deployFolderName
         if (new File(deployPath).isDirectory()) {
@@ -29,9 +29,9 @@ task deploy {
         }
     }
     doLast {
-        String serviceName = 'discordtizilandbot_' + env
-        String displayName = 'Discord Tiziland Bot ' + env
-        String deployFolderName = 'DiscordTizilandBot_' + env
+        String serviceName = 'discordschoolroomsbot_' + env
+        String displayName = 'Discord Schoolrooms Bot ' + env
+        String deployFolderName = 'DiscordSchoolroomsBot_' + env
 
         copy {
             from('deploy/templates') {
@@ -105,7 +105,7 @@ assemble.dependsOn(copyDependencies)
 jar {
     manifest {
         attributes(
-                'Main-Class': 'com.slash.tizilandbot.Application',
+                'Main-Class': 'com.slash.schoolroomsbot.Application',
                 'Class-Path': configurations.runtimeClasspath.files.stream().map {'lib/' + it.name }.distinct().collect(Collectors.joining(' '))
         )
     }
