--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 .gradle
 build
 
-# TizilandBot
-DiscordTizilandBot_*
+# SchoolroomsBot
+DiscordSchoolroomsBot_*
 src/main/resources/config-dev.properties
 src/main/resources/config-prod.properties
